   the aspects) a much better job.

 * The ``stalker.core.mixins`` module is merged with
   :mod:`~stalker.core.models` module.

 * Becase all the models are declaratively defined and thus they have their
   mappers and tables inside, the ``stalker.db.mapper``, ``stalker.db.tables``
   and the ``stalker.db.mixins`` modules are removed.

v0.1.2.a1
----------

 * Started to switch to SQLAlchemy ORM Declarative for SOM, implemented these
   classes successfully:
   
   SimpleEntity, Type, Tag, Note, ImageFormat, Status, StatusList, Repository,
   Structure, FilenameTemplate, Department, Link, ReferenceMixin, StatusMixin,
   ScheduleMixin, Project, Sequence, Shot, Asset, Review.

 * Empty :class:`~stalker.core.models.StatusList`\ s are now allowed. The
   validation overhead is left to the SOM user.

 * Removed the ``TaskMixin`` on the way of moving to declarative. It was not
   possible to add a one-to-many relation to the
   :class:`~stalker.core.model.Task`\ s
   :attr:`~stalker.core.models.Task.task_of` attribute from all the mixed-in
   classes. So the solution was to introduce a new
   :class:`~stalker.core.models.TaskableEntity` (yaykh!) inheriting from
   :class:`~stalker.core.models.Entity`.

 * The :attr:`~stalker.core.models.SimpleEntity.name` attribute in
   :attr:`~stalker.core.models.SimpleEntity` is no more forced to be unique.
   This releases the :attr:`~stalker.core.models.Shot.name` attribute in the
   :class:`~stalker.core.models.Shot` class to be anything it wants (not just
   uuid4 sequences to get unique names).

 * From now on, the :attr:`~stalker.core.models.SimpleEntity.code` attribute in
   :class:`~stalker.core.models.SimpleEntity` class is not going to change when
   the :attr:`~stalker.core.models.SimpleEntity.name` attribute is changed.

 * The :attr:`~stalker.core.models.SimpleEntity.name` attribute in
   :class:`~stalker.core.models.SimpleEntity` is going to be copied from the